# Legal-RAG

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  run.py
.github/workflows/: build.yml
docs/: SETUP.md  pulling_data.md  typst.md  vectorstore.md
docs/legacy/: PROMPT_SETUP.md
paper/: acl.typ  bibliography.bib  main.typ
prompts/: instructions.md  prompts.yaml
prompts/markdown/: enhance.md  profile.md  prompts_v1.md  testing.md
prompts/python_module/: README.md  prompts.py
scripts/: batch_pull.sh  init_db.sh  pull_data.sh
src/: main.py  pull_data.py
src/agents/: __init__.py  agent_controller.py  agents.py  defendant.py  judge.py  prosecutor.py
src/ingestion/: SQLite_db.py  __init__.py  chunking.py  db_connect.py  db_model.py  gather.py  init_db.py  vectorstore.py
src/preprocessing/: __init__.py  chunking.py  preprocessor.py
src/prompts/: __init__.py  prompts.py  yaml_conversion.py
src/vectorstore/: SQLite_db.py  __init__.py  db_model.py  sql_upsert.py  vectorstore.py
tests/: test_main.py
tests/ingestion/: test_chunking.py
