[project]
name = "legal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.3.4",
    "langchain-text-splitters>=1.0.0",
    "pip>=25.3",
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.11",
    "sqlalchemy>=2.0.44",
    "torch>=2.9.1",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]

[tool.pyest.ini.options]
addopts = "--cov=legal-rag"
